--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
     implementation 'com.github.qamarelsafadi:CurvedBottomNavigation:0.1.3'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -49,6 +52,10 @@ dependencies {
     implementation "androidx.fragment:fragment:1.7.0-alpha03"
     implementation "androidx.fragment:fragment-ktx:1.7.0-alpha03"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
