--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.work:work-runtime:2.0.0-rc01"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
@@ -58,6 +59,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
