--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
         <package android:name="com.whatsapp" />
         <package android:name="com.whatsapp.w4b" />
         <package android:name="org.telegram.messenger" />
-    </queries>
-
-    <!--permissions to write contacts-->
+    </queries> <!-- permissions to write contacts -->
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -33,6 +31,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CarTravelsDailerApp"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.Login2Activity"
+            android:exported="false" />
         <activity
             android:name=".ui.CallHistroyActivity"
             android:exported="false" />
@@ -62,7 +63,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
 
         <receiver
             android:name=".broadcastreceivers.CallEndReceiver"
