--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,18 @@
         <package android:name="com.whatsapp.w4b" />
         <package android:name="org.telegram.messenger" />
     </queries> <!-- permissions to write contacts -->
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.flash"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -32,6 +44,9 @@
         android:theme="@style/Theme.CarTravelsDailerApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.Login2Activity"
             android:exported="false" />
         <activity
@@ -53,7 +68,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.ProfileActivity"
+            android:name=".ui.VisitingCardActivity"
             android:exported="false" />
         <activity
             android:name=".ui.InCallActivity"
@@ -71,7 +86,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
     </application>
