--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -38,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
     implementation "androidx.work:work-runtime:2.0.0-rc01"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
