--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,37 +40,34 @@ android {
 
 dependencies {
     implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
-    implementation "androidx.work:work-runtime:2.0.0-rc01"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation "androidx.work:work-runtime:2.9.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation 'com.github.qamarelsafadi:CurvedBottomNavigation:0.1.3'
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
-    implementation "androidx.fragment:fragment:1.7.0-alpha03"
-    implementation "androidx.fragment:fragment-ktx:1.7.0-alpha03"
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
+    implementation "androidx.fragment:fragment:1.7.0-alpha07"
+    implementation "androidx.fragment:fragment-ktx:1.7.0-alpha07"
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
     implementation 'com.alexstyl:contactstore:1.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    //implementation("androidx.room:room-runtime:2.6.0")
-  //  kapt "androidx.room:room-compiler:2.6.0"
-  //  kapt "android.arch.persistence.room:compiler:1.1.1"
-    implementation "androidx.room:room-runtime:2.6.0-alpha01"
-    annotationProcessor  "androidx.room:room-compiler:2.6.0-alpha01"
-    kapt  "androidx.room:room-compiler:2.6.0-alpha01"
+    implementation "androidx.room:room-runtime:2.6.1"
+    annotationProcessor  "androidx.room:room-compiler:2.6.1"
+    kapt  "androidx.room:room-compiler:2.6.1"
 }
