--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         android:theme="@style/Theme.CarTravelsDailerApp"
         tools:targetApi="31">
         <activity
+            android:name=".ui.CallActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.SearchActivity"
             android:exported="false">
             <meta-data
