--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
 }
 
 dependencies {
+    //RetroFit Dependencies
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.1'
+
     implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
     implementation "androidx.work:work-runtime:2.9.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
