--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.1'
+    implementation 'io.github.chaosleung:pinview:1.4.4'
 
     implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
     implementation "androidx.work:work-runtime:2.9.0"
