--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:theme="@style/Theme.CarTravelsDailerApp"
         tools:targetApi="31">
         <activity
-            android:name=".OtpActivity"
+            android:name=".ui.OtpActivity"
             android:exported="false" />
         <activity
             android:name=".ui.CallActivity"
