--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id("com.google.gms.google-services")
+
 }
 
 android {
@@ -38,36 +39,39 @@ android {
     }
 }
 
+
 dependencies {
+
+    implementation project(path: ':searchablespinner')
+
     //RetroFit Dependencies
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.1'
     implementation 'io.github.chaosleung:pinview:1.4.4'
 
-    implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
+    implementation(platform('com.google.firebase:firebase-bom:32.7.0'))
     implementation "androidx.work:work-runtime:2.9.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
     implementation 'com.github.qamarelsafadi:CurvedBottomNavigation:0.1.3'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
-    implementation "androidx.fragment:fragment:1.7.0-alpha07"
-    implementation "androidx.fragment:fragment-ktx:1.7.0-alpha07"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
+    implementation "androidx.fragment:fragment:1.7.0-alpha08"
+    implementation "androidx.fragment:fragment-ktx:1.7.0-alpha08"
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.work:work-runtime-ktx:2.9.0'
     implementation 'com.alexstyl:contactstore:1.7.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
@@ -75,6 +79,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "androidx.room:room-runtime:2.6.1"
-    annotationProcessor  "androidx.room:room-compiler:2.6.1"
-    kapt  "androidx.room:room-compiler:2.6.1"
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
 }
